Pass -XX:-UseCompactObjectHeaders in test JNIMonitor.java