@@ -121,6 +121,9 @@ public class JNIMonitor {
             "-Xlog:thread+os=info",
             // We only count monitors in LM_LEGACY mode
             "-XX:LockingMode=1",
+            // Disable compact headers since that switches locking mode to LM_LIGHTWEIGHT
+            "-XX:+UnlockExperimentalVMOptions",
+            "-XX:-UseCompactObjectHeaders",
             "JNIMonitor$" + test,
         };
         OutputAnalyzer oa = ProcessTools.executeTestJava(cmdArgs);
